tune build, java 17